--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 But now I’m calling Dallas, TX, working on my Bachelor’s in Electrical and Computer Engineering at SMU. I’am also minoring in Music – Saxophone Performance because, why not blend tech with some tunes, right?
                 <br><br>
                 I’m big into cycling—I did a lot of racing back in high school. There’s something about the freedom of hitting the open road, breathing in the fresh air under the woods, that just feels right. 
-                I’m also a huge fan of all things mechanical, whether it’s bike gears, bearings, or car parts. The craftsmanship and design that goes into these things fascinates me.
+                I’m also a huge fan of all things mechanical, whether it’s bike gears, bearings, or car parts. Oh, I also fixed my friend's 1995 Miata ECU last summer! It's a fun story and I'm willing to share that with you.
+                 The craftsmanship and design that goes into these things fascinates me.
                 <br><br>
                 Besides tech and bikes, I’m all about music, with J-pop being my go-to jam. And being in Dallas, I’m still getting the hang of blending different cultures, which has been a cool part of my journey here in the States.
                 <br><br>
@@ -104,7 +105,7 @@
                 </div>
                 <div class="project-item">
                     <img src="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/main/Projects/IEEEStudent.jpg?raw=true" alt="Project 2">
-                    <h3>Secretary - IEEE Student Branches</h3>
+                    <h3>Corresponding Chair - IEEE Student Branches</h3>
                     <p style="font-weight: bold;">Jan 2024 - Present</p>
                     <p>Since January 2024, I've been promoting Electrical and Computer Engineering events at SMU through social media, increasing visibility and student engagement. 
                         Managing digital content has sharpened my communication and marketing skills, helping to create a more connected campus community.
@@ -141,16 +142,15 @@
                 <div class="project-item">
                     <h3>Open-source Projects</h3>
                     <a href="https://www.thingiverse.com/thing:5531157"target="_blank"><connectlink>Bike Computer Mount</connectlink></a>
-                    <p>3D modeling is my hobby and I'd like to create useful or unuseful items and print them out. I enjoy the open source community and I got a lot of help with a lot of people. 
-                        I built a 3D printer with open-sourced BOM and firmwork, keyboards with open sorce pcb files and I asked for manufacture it and soldered by myself.
-                        I made a Bike Computer mount by utilized Fusion 360 to create a custom Bike Computer mount, modeling and performing static simulation analysis to ensure durability and functionality. 
-                        And it is available on Thingiverse.
+                    <p>3D modeling is a hobby of mine, and I like making both useful and random stuff to print. I really enjoy being part of the open-source community, and I've gotten a ton of help from lots of people. 
+                        I built a 3D printer using open-source BOM and firmware, and also made some keyboards using open-source PCB files. I had them manufactured and soldered them myself. 
+                        One of my projects was a custom bike computer mount that I designed in Fusion 360. I did some static simulation analysis to make sure it’s durable and functional, and you can find it on Thingiverse.
                     </p>
                 </div>
                 <div class="project-item">
                     <h3>Small Research Papers</h3>
                     <h5>Here's some small research project I did in the past. Click the title to view the paper:</h5>
-                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em style="color: #213a53;">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
+                    <a href="https://github.com/Superuser-Henry/superuser-henry.github.io/blob/043172d9e2f896547874f95f6649f9328ca44546/Researches/Music%20History%20Research%20Paper.pdf"target="_blank"><em style="color: #345779; font-weight: 600;">Echoes of Change: Mariya Takeuchi and the 1980s Japanese Pop Music Scene</em></a>
                     <p>
                         The paper explores the evolution of the 1980s Japanese pop music scene, with a focus on socio-economic and cultural factors that influenced the rise of J-pop and City Pop. 
                         It highlights the artist Mariya Takeuchi and her iconic song Plastic Love, examining its impact on contemporary artists and internet culture.
